--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-comments-section": "^3.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
