--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "concurrently \"npm run dev\" \"npm run client\"",
     "client": "npm start --prefix client",
     "dev": "nodemon server.js "
   },
